bugs fixed: 1. On mobile view image modal didn't take up entire view 2. General css fixes, got rid off seperator class, now spacing in card bundles and between them are done with gaps 3. On mobile view order wasn't alternating between landscape and portrait.

--- a/components/openImageModal/index.module.css
+++ b/components/openImageModal/index.module.css
@@ -150,9 +150,9 @@
   }
   .bigImageWrapper {
     flex-direction: column;
+    max-height: 100%;
     height: 100%;
     width: 100%;
-    flex: 1;
   }
   .imageWrapper {
     width: 100%;
